force-app/main/default/objects/PDLM__Training_Plan__c/PDLM__Training_Plan__c.object-meta.xml
<CustomObject>
    <label>Training Plan</label>
    <nameField>
        <displayFormat>TP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>