force-app/main/default/objects/PDLM__Training_Plan__c/fields/PDLM__Is_Creator__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Is_Creator__c</fullName>
    <formula>CreatedById = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator is Current User</label>
    <type>Checkbox</type>
</CustomField>