force-app/main/default/objects/PDLM__Training_Plan__c/fields/PDLM__Master_Training_Plan__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Master_Training_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Training Plan</label>
    <referenceTo>PDLM__Training_Plan__c</referenceTo>
    <relationshipLabel>Archived Training Plans</relationshipLabel>
    <relationshipName>Archived_Training_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>