force-app/main/default/objects/PDLM__Training_Plan__c/fields/PDLM__Retraining_Date__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Retraining_Date__c</fullName>
    <label>Retraining Date</label>
    <type>Date</type>
</CustomField>