force-app/main/default/objects/PDLM__Training_Plan__c/fields/PDLM__Total_Assignments__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Total_Assignments__c</fullName>
    <label>Total Assignments</label>
    <summaryForeignKey>PDLM__Training_Assignment__c.PDLM__Training_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>