force-app/main/default/objects/PDLM__Training_Plan__c/validationRules/PDLM__Rolling_Retraining_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Rolling_Retraining_Type</fullName>
    <active>true</active>
    <description>When Retraining is on, and Retraining Type is &apos;Rolling&apos;, Retraining Date should be empty.</description>
    <errorConditionFormula>AND(
        PDLM__Retraining__c = true,
        TEXT(PDLM__Retraining_Type__c) = &apos;Rolling&apos;,
        TEXT(PDLM__Retraining_Date__c) != null
    )</errorConditionFormula>
    <errorMessage>When Retraining is on, and Retraining Type is &apos;Rolling&apos;, Retraining Date should be empty.</errorMessage>
</ValidationRule>