force-app/main/default/objects/PDLM__Training_Plan__c/validationRules/PDLM__Rolling_Retraining_Type_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Rolling_Retraining_Type_Required_Fields</fullName>
    <active>true</active>
    <description>When Retraining is on, and Retraining Type is &apos;Rolling&apos;, Retraining Interval and Days To Complete are required and both must be positive integers.</description>
    <errorConditionFormula>AND(
        PDLM__Retraining__c = true,
        TEXT(PDLM__Retraining_Type__c) = &apos;Rolling&apos;,
        OR (
            ISNULL( PDLM__Retraining_Interval__c ),
            PDLM__Retraining_Interval__c &lt; 1
        )
    )</errorConditionFormula>
    <errorMessage>When Retraining is on, and Retraining Type is &apos;Rolling&apos;, Retraining Interval and Days To Complete are required and both must be positive integers.</errorMessage>
</ValidationRule>