force-app/main/default/objects/PDLM__Training_Plan__c/listViews/PDLM__All.listView-meta.xml
<ListView>
    <fullName>PDLM__All</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Description__c</columns>
    <columns>PDLM__Status__c</columns>
    <columns>PDLM__Open_Assignments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>